Edit session titles.

--- a/_posts/2017-09-12-day-2.md
+++ b/_posts/2017-09-12-day-2.md
@@ -1,9 +1,9 @@
 ---
-title:  Session 1
+title:  Day 2
 layout: singletrack
-tagline: Tagline
+tagline: 
 show_abstracts: true
-room: Room Number
+room: 
 talks:
 - title: "Arrivals"
   start: "8:00"
