Update with last year's schedule

--- a/_posts/2017-09-11-day-1.md
+++ b/_posts/2017-09-11-day-1.md
@@ -1,31 +1,52 @@
 ---
-title: Day 1
+title:  "Day 1"
 layout: singletrack
-tagline: 
+tagline: "Summer school"
 show_abstracts: true
-room: 
+room: "PLB-DS05, Pam Liversidge Building"
 talks:
 - title: "Arrivals"
   start: "8:00"
   end: "9:00"
-- title: "First Talk"
-  speaker: "Bilbo Baggins"
-  url: "http://bilbobaggins.com"
-  institute: "University of Middle Earth"
-  abstract: "In this talk I'll give a short presentation on hairy feet. The main assumed knowledge will be powerful rings and loyal sidekicks."
+- title: "Introduction to GPs"
+  speaker: "Neil Lawrence"
+  abstract: "In this talk I'll give a short introduction to Gaussian processes. The main assumed knowledge will be a background in proabilistic approaches to regression and linear algebra."
+  url: "http://inverseprobability.com"
+  institute: "University of Sheffield"
   start: "9:00"
   end: "10:30"
+  slides: gp_gpss16_session1.pdf
+  youtube: jjRoN-j8Rj0
 - title: "Coffee Break"
   start: "10:30"
   end: "11:00"
-- title: TBA
+- title: Introduction to Uncertainty Quantification and Gaussian Processes
+  abstract:
+  speaker: "Jeremy Oakley"
+  url: "http://www.jeremy-oakley.staff.shef.ac.uk/"
+  institute: "University of Sheffield"
   start: "11:00"
   end: "12:30"
-  speaker: "Gandalf"
-  institute: "University of Middle Earth"
+  slides: oakley.pdf
+  youtube: PCkdC3SKkPU
 - title: "Lunch"
   start: "12:30"
   end: "13:45"
+- title: "Lab Session 1"
+  speaker: "[notebook]"
+  url: "./labs/GPSS_Lab1_2016.ipynb"
+  start: "13:45"
+  end: "15:30"
+- title: "Tea Break"
+  start: "15:30"
+  end: "16:00"
+- title: Kernel Design
+  abstract:
+  speaker: "Nicolas Durrande"
+  url: "https://sites.google.com/site/nicolasdurrandehomepage/"
+  institute: "Ecole des Mines de St Etienne"
+  start: "16:00"
+  end: "17:00"
+  slides: durrande_school.pdf
+  youtube: -sY8zW3Om1Y
 ---
-
-
