--- a/_posts/2017-09-12-day-2.md
+++ b/_posts/2017-09-12-day-2.md
@@ -1,31 +1,54 @@
 ---
-title:  Day 2
+title:  "Day 2"
 layout: singletrack
-tagline: 
+tagline: "Summer school"
 show_abstracts: true
-room: 
+room: "PLB-DS05, Pam Liversidge Building"
+talks:
 talks:
 - title: "Arrivals"
   start: "8:00"
   end: "9:00"
-- title: "First Talk"
-  speaker: "Bilbo Baggins"
-  url: "http://bilbobaggins.com"
-  institute: "University of Middle Earth"
-  abstract: "In this talk I'll give a short presentation on hairy feet. The main assumed knowledge will be powerful rings and loyal sidekicks."
+- title: Gaussian Processes for Regression, Global Optimization and Set Estimation
+  abstract:
+  speaker: "David Ginsbourger"
+  url: "http://www.ginsbourger.ch/"
+  institute: "IDIAP Research Institute and University of Bern"
+  abstract: ""
   start: "9:00"
   end: "10:30"
+  slides: ginsbourger.pdf
+  youtube: iJI5Gr8wru8
 - title: "Coffee Break"
   start: "10:30"
   end: "11:00"
-- title: TBA
+- title: "Fitting Covariance and Multi Output Gaussian Processes"
+  abstract:
+  speaker: "Neil Lawrence"
+  url: "http://inverseprobability.com"
+  institute: "University of Sheffield"
   start: "11:00"
   end: "12:30"
-  speaker: "Gandalf"
-  institute: "University of Middle Earth"
+  slides: gp_gpss16_session2.pdf
+  youtube: WBpLzYIXlBU
 - title: "Lunch"
   start: "12:30"
   end: "13:45"
+- title: "Lab Session 2"
+  speaker: "[notebook]"
+  url: "./labs/GPSS_Lab2_2016.ipynb"
+  start: "13:45"
+  end: "15:30"
+- title: "Tea Break"
+  start: "15:30"
+  end: "16:00"
+- title: "Probabilistic Numerical Computation: A New Concept?"
+  youtube: ncqaqnLStAk
+  abstract:
+  speaker: Mark Girolami
+  url: "http://www2.warwick.ac.uk/fac/sci/statistics/staff/academic-research/girolami/"
+  institute: University of Warwick
+  youtube: ncqaqnLStAk
+  start: "16:00"
+  end: "17:00"
 ---
-
-
