--- a/_posts/2017-09-13-day-3.md
+++ b/_posts/2017-09-13-day-3.md
@@ -1,31 +1,75 @@
 ---
-title: Day 3
+title:  "Day 3"
 layout: singletrack
-tagline: 
+tagline: "Summer school"
 show_abstracts: true
-room: 
+room: "PLB-DS05, Pam Liversidge Building"
 talks:
 - title: "Arrivals"
   start: "8:00"
   end: "9:00"
-- title: "First Talk"
-  speaker: "Bilbo Baggins"
-  url: "http://bilbobaggins.com"
-  institute: "University of Middle Earth"
-  abstract: "In this talk I'll give a short presentation on hairy feet. The main assumed knowledge will be powerful rings and loyal sidekicks."
+- title: Global Optimization with Gaussian Processes
+  abstract:
+  speaker: Javier Gonzalez
+  url: "http://javiergonzalezh.github.io/"
+  institute: University of Sheffield
+  slides: gonzalez.pdf
+  youtube: ovAs5uZbrQ4
   start: "9:00"
+  end: "9:45"
+- title: Introduction to ABC (Approximate Bayesian Computation)
+  abstract:
+  speaker: "Rich Wilkinson"
+  url: "http://r-wilkinson.staff.shef.ac.uk/"
+  institute: "University of Sheffield"
+  abstract:
+  slides: wilkinson.pdf
+  youtube: Et0Dqqg7aKM
+  start: "9:45"
   end: "10:30"
 - title: "Coffee Break"
   start: "10:30"
-  end: "11:00"
-- title: TBA
-  start: "11:00"
-  end: "12:30"
-  speaker: "Gandalf"
-  institute: "University of Middle Earth"
+  end: "10:45"
+- title: Bayesian Optimization for Likelihood Free-Inference
+  abstract:
+  youtube: pEUL5UFZsY4
+  speaker: "Michael Gutmann"
+  url: "https://sites.google.com/site/michaelgutmann/"
+  institute: "University of Helsinki"
+  abstract:
+  slides: gutmann.pdf
+  start: "10:45"
+  end: "11:45"
+- title: Probabilistic Numerics for Differential Equations
+  abstract:
+  speaker: Tim Sullivan
+  institute: Zuse Institute Berlin
+  url: "http://www.zib.de/members/sullivan"
+  start: "11:45"
+  end: "12:45"
+  youtube: 5oI6pCNJDX4
 - title: "Lunch"
-  start: "12:30"
+  start: "12:45"
   end: "13:45"
+- title: History Matching
+  speaker: <a href="https://www.dur.ac.uk/research/directory/staff/?id=3289">Ian Vernon</a> and <a href="http://www.lshtm.ac.uk/aboutus/people/andrianakis.ioannis">Ioannis Andrianakis</a>
+  institute: Durham University
+  url: ""
+  abstract:
+  slides: andrianakis.pdf
+  start: "13:45"
+  end: "14:45"
+- title: "Lab Session 3 - Bayesian optimization with GPyOpt"
+  speaker: "[notebook]"
+  url: "./labs/GPSS_Lab3_2016.ipynb"
+  start: "14:45"
+  end: "17:00"
+- title: "Lab Session 3 - History matching in R"
+  speaker: Ian Vernon and Ioannis Andrianakis
+  url: "GPSSWorkshop.zip"
+  start: "14:45"
+  end: "17:00"
+- title: "Tea Break"
+  start: "15:30"
+  end: "16:00"
 ---
-
-
