--- a/_posts/2017-09-14-day-4.md
+++ b/_posts/2017-09-14-day-4.md
@@ -1,31 +1,13 @@
 ---
-title: Workshop
+title:  "Day 4"
 layout: singletrack
-tagline: 
-show_abstracts: true
-room: 
+tagline: "Uncertainty Quantification and <a href='http://www.enbis.org/activities/events/current/424_ENBIS_16_in_Sheffield/?_ts=1&_ts=1'>ENBIS</a> workshops"
+room: "TBA"
 talks:
 - title: "Arrivals"
   start: "8:00"
   end: "9:00"
-- title: "First Talk"
-  speaker: "Bilbo Baggins"
-  url: "http://bilbobaggins.com"
-  institute: "University of Middle Earth"
-  abstract: "In this talk I'll give a short presentation on hairy feet. The main assumed knowledge will be powerful rings and loyal sidekicks."
+- title: "Split Workshops"
   start: "9:00"
-  end: "10:30"
-- title: "Coffee Break"
-  start: "10:30"
-  end: "11:00"
-- title: TBA
-  start: "11:00"
-  end: "12:30"
-  speaker: "Gandalf"
-  institute: "University of Middle Earth"
-- title: "Lunch"
-  start: "12:30"
-  end: "13:45"
+  end: "17:00"
 ---
-
-
