Update with new author format

--- a/_posts/2017-09-12-day-2.md
+++ b/_posts/2017-09-12-day-2.md
@@ -37,8 +37,11 @@ talks:
   start: "12:30"
   end: "13:45"
 - title: "Lab Session 2"
-  speaker: "[notebook]"
-  url: 
+  author:
+  - family:
+    given:
+    url:
+  ipynb:
   start: "13:45"
   end: "15:30"
 - title: "Tea Break"
