--- a/_posts/2017-09-13-day-3.md
+++ b/_posts/2017-09-13-day-3.md
@@ -37,9 +37,10 @@ talks:
   youtube: 
 - title: "Lab Session 3 - Bayesian optimization with GPyOpt"
   author: 
-  - family: "[notebook]"
+  - family: 
     given:
-    url: "./labs/GPSS_Lab3_2016.ipynb"
+    url:
+  ipynb: "./labs/GPSS_Lab3_2016.ipynb"
   start: "14:00"
   end: "16:00"
 - title: "Tea Break"
