--- a/_posts/2017-09-12-day-2.md
+++ b/_posts/2017-09-12-day-2.md
@@ -9,11 +9,13 @@ talks:
 - title: "Arrivals"
   start: "8:00"
   end: "9:00"
-- title: Gaussian Processes for Global Optimization
+- title: "Multi Output Gaussian Processes"
   abstract:
-  speaker: "Javier Gonzalez"
-  url: "http://javiergonzalezh.github.io/"
-  institute: "Amazon Research Cambridge"
+  author:
+  - family: Alvarez
+    given: Mauricio
+    url: "https://sites.google.com/site/maalvarezl/"
+    institute: "University of Sheffield"
   abstract: ""
   start: "9:00"
   end: "10:30"
@@ -22,13 +24,13 @@ talks:
 - title: "Coffee Break"
   start: "10:30"
   end: "11:00"
-- title: "Multi Output Gaussian Processes"
+- title: "TBA"
   abstract:
   author:
-  - family: Alvarez
-    given: Mauricio
-    url: "https://sites.google.com/site/maalvarezl/"
-    institute: "University of Sheffield"
+  - family: 
+    given: 
+    url: 
+    institute:
   start: "11:00"
   end: "12:30"
   slides: 
@@ -51,10 +53,10 @@ talks:
   youtube: 
   abstract:
   author:
-  - family:
-    given: 
-    url: 
-    institute: 
+  - family: Sarkka
+    given: Simo
+    url: "https://users.aalto.fi/~ssarkka/"
+    institute: "Aalto University"
   youtube: 
   start: "16:00"
   end: "17:00"
