--- a/_posts/2017-09-13-day-3.md
+++ b/_posts/2017-09-13-day-3.md
@@ -8,13 +8,13 @@ talks:
 - title: "Arrivals"
   start: "8:00"
   end: "9:00"
-- title: TBA
+- title: Introduction to Bayesian Optimization
   abstract:
   author:
-  - family:
-    given:
-    url: 
-    institute: 
+  - family: Gonzalez
+    given: Javier
+    url: "http://javiergonzalezh.github.io/"
+    institute: "Amazon Research Cambridge"
   slides: 
   youtube: 
   start: "9:00"
@@ -22,14 +22,14 @@ talks:
 - title: "Coffee Break"
   start: "10:30"
   end: "11:00"
-- title: TBA
+- title: Unsupervised Learning with GPs
   abstract:
   youtube: 
   author: 
-  - family:
-    given:
-    url: 
-    institute: 
+  - family: Damianou
+    given: Andreas
+    url:  "http://adamian.github.io/"
+    institute: "Amazon Research Cambridge"
   abstract:
   slides: 
   start: "11:00"
