--- a/_posts/2017-09-13-day-3.md
+++ b/_posts/2017-09-13-day-3.md
@@ -33,17 +33,31 @@ talks:
   abstract:
   slides: 
   start: "11:00"
-  end: "13:00"
+  end: "12:30"
   youtube: 
-- title: "Lab Session 3 - Bayesian optimization with GPyOpt"
-  author: 
-  - family: 
+ - title: "Lunch"
+  start: "12:30"
+  end: "13:45"
+- title: "Lab Session 3"
+  author:
+  - family:
     given:
     url:
-  ipynb: "./labs/GPSS_Lab3_2016.ipynb"
-  start: "14:00"
-  end: "16:00"
+  ipynb:
+  start: "13:45"
+  end: "15:30"
 - title: "Tea Break"
+  start: "15:30"
+  end: "16:00"
+- title: TBA
+  youtube: 
+  abstract:
+  author:
+  - family: Vehtari
+    given: Aki
+    url: "https://users.aalto.fi/~ave/"
+    institute: "Aalto University"
+  youtube: 
   start: "16:00"
   end: "17:00"
 ---
