--- a/_posts/2017-09-13-day-3.md
+++ b/_posts/2017-09-13-day-3.md
@@ -29,21 +29,20 @@ talks:
   - family: Damianou
     given: Andreas
     url:  "http://adamian.github.io/"
-    institute: "Amazon Research Cambridge"
-  abstract:
-  slides: 
+    institute: "Amazon Research Cambridge" 
   start: "11:00"
   end: "12:30"
+  slides:
   youtube: 
- - title: "Lunch"
+- title: "Lunch"
   start: "12:30"
   end: "13:45"
-- title: "Lab Session 3"
+- title: "Lab Session 3 - Bayesian optimization with GPyOpt"
   author:
   - family:
     given:
-    url:
-  ipynb:
+    url: 
+    ipynb: "https://nbviewer.jupyter.org/github/gpschool/gpss17/blob/gh-pages/slides/labs/GPSS_Lab3_2016.ipynb"
   start: "13:45"
   end: "15:30"
 - title: "Tea Break"
