--- a/_posts/2017-09-11-day-1.md
+++ b/_posts/2017-09-11-day-1.md
@@ -25,9 +25,9 @@ talks:
 - title: TBA
   abstract:
   author:
-  - family:
-    given:
-    url: 
+  - family: Wilkinson
+    given: Richard
+    url: "https://rich-d-wilkinson.github.io/"
     institute: 
   start: "11:00"
   end: "12:30"
