--- a/_posts/2017-09-11-day-1.md
+++ b/_posts/2017-09-11-day-1.md
@@ -28,7 +28,7 @@ talks:
   - family: Wilkinson
     given: Richard
     url: "https://rich-d-wilkinson.github.io/"
-    institute: 
+    institute: University of Sheffield
   start: "11:00"
   end: "12:30"
   slides: 
