--- a/_posts/2017-09-14-day-4.md
+++ b/_posts/2017-09-14-day-4.md
@@ -7,7 +7,7 @@ talks:
   start: "8:00"
   end: "9:00"
 - title: "Advances in Approximate Inference with GPs"
-  url: "http://gpss.cc//gpss17//advances-approximate-inference-gps.html"
+  url: ""
   start: "9:00"
   end: "17:00"
 ---
