--- a/_posts/2017-09-13-day-3.md
+++ b/_posts/2017-09-13-day-3.md
@@ -22,14 +22,14 @@ talks:
 - title: "Coffee Break"
   start: "10:30"
   end: "11:00"
-- title: Unsupervised Learning with GPs
+- title: "TBA"
   abstract:
   youtube: 
   author: 
-  - family: Damianou
-    given: Andreas
-    url:  "http://adamian.github.io/"
-    institute: "Amazon Research Cambridge" 
+  - family: 
+    given: 
+    url:  
+    institute:  
   start: "11:00"
   end: "12:30"
   slides:
