--- a/_posts/2017-09-12-day-2.md
+++ b/_posts/2017-09-12-day-2.md
@@ -24,13 +24,13 @@ talks:
 - title: "Coffee Break"
   start: "10:30"
   end: "11:00"
-- title: "TBA"
+- title: "Unsupervised Learning with GPs"
   abstract:
   author:
-  - family: 
-    given: 
-    url: 
-    institute:
+  - family: Ek
+    given: Carl Henrik
+    url: "http://www.carlhenrik.com/"
+    institute: University of Bristol
   start: "11:00"
   end: "12:30"
   slides: 
