--- a/_posts/2017-09-13-day-3.md
+++ b/_posts/2017-09-13-day-3.md
@@ -22,14 +22,14 @@ talks:
 - title: "Coffee Break"
   start: "10:30"
   end: "11:00"
-- title: "TBA"
+- title: "Sparse Gaussian Processes"
   abstract:
   youtube: 
   author: 
-  - family: 
-    given: 
-    url:  
-    institute:  
+  - family: Turner
+    given: Richard
+    url: "http://www.eng.cam.ac.uk/profiles/ret26" 
+    institute: "University of Cambridge"
   start: "11:00"
   end: "12:30"
   slides:
