--- a/_posts/2017-09-12-day-2.md
+++ b/_posts/2017-09-12-day-2.md
@@ -49,7 +49,7 @@ talks:
 - title: "Tea Break"
   start: "15:30"
   end: "16:00"
-- title: TBA
+- title: Stochastic (partial) differential equations and Gaussian processes
   youtube: 
   abstract:
   author:
