--- a/_posts/2017-09-11-day-1.md
+++ b/_posts/2017-09-11-day-1.md
@@ -22,7 +22,7 @@ talks:
 - title: "Coffee Break"
   start: "10:30"
   end: "11:00"
-- title: TBA
+- title: "A second introduction to GPs"
   abstract:
   author:
   - family: Wilkinson
