--- a/_posts/2017-09-13-day-3.md
+++ b/_posts/2017-09-13-day-3.md
@@ -48,7 +48,7 @@ talks:
 - title: "Tea Break"
   start: "15:30"
   end: "16:00"
-- title: TBA
+- title: "Integration over hyperparameters and estimation of predictive performance"
   youtube: 
   abstract:
   author:
