--- a/_posts/2017-09-13-day-3.md
+++ b/_posts/2017-09-13-day-3.md
@@ -22,8 +22,8 @@ talks:
 - title: "Coffee Break"
   start: "10:30"
   end: "11:00"
-- title: "Sparse Gaussian Processes"
-  abstract:
+- title: "Sparse Gaussian Process Approximations"
+  abstract: "The application of GPs is limited by computational and analytical intractabilities that arise when data are sufficiently numerous or when employing non-Gaussian models. A wealth of GP approximation schemes have been developed over the last 15 years to address these key limitations. Many of these schemes employ a small set of pseudo data points to summarise the actual data. This pseudo data summary transform the dense matrix computations required by GPs into sparse matrix computations enabling acceleration. I will review some of the most important approaches in this vein, focussing on the variational inference approach that has recently revolutionised the deployment of GP-based probabilistic models." 
   youtube: 
   author: 
   - family: Turner
