--- a/labs/GPSS_Lab1_2017_answers.ipynb
+++ b/labs/GPSS_Lab1_2017_answers.ipynb
@@ -738,7 +738,7 @@
    "source": [
     "# Try plotting sample paths here\n",
     "\n",
-    "#Here I plot a couple of periodic Matern32 kernel, combined with a linear kernel\n",
+    "#Here I plot samples using the periodic Matern32 kernel added to a linear kernel\n",
     "\n",
     "k = GPy.kern.PeriodicMatern32(input_dim=1,period=0.2,variance=5000) + GPy.kern.Linear(1)\n",
     "\n",
