link to https://github.com/gpschool/gpss17/blob/gh-pages/labs/Wilkinson2017.pdf

--- a/_posts/2017-09-11-day-1.md
+++ b/_posts/2017-09-11-day-1.md
@@ -31,7 +31,7 @@ talks:
     institute: University of Sheffield
   start: "11:00"
   end: "12:30"
-  slides: 
+  slides: https://github.com/gpschool/gpss17/blob/gh-pages/labs/Wilkinson2017.pdf
   youtube: 
 - title: "Lunch"
   start: "12:30"
