--- a/labs/GPSS_Lab2_2017.ipynb
+++ b/labs/GPSS_Lab2_2017.ipynb
@@ -39,7 +39,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%pylab inline\n",
@@ -92,7 +94,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X = data['X']\n",
@@ -110,7 +114,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print (data['citation'])"
@@ -126,7 +132,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print (data['output_info'])"
@@ -142,7 +150,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print ('First column of X contains the olympic years.')\n",
@@ -161,7 +171,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "markers = ['bo', 'ro', 'bx', 'rx', 'bs', 'rs']\n",
@@ -228,7 +240,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = GPy.models.GPRegression(X, y, kern)\n",
@@ -246,6 +260,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -279,7 +294,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = GPy.models.GPRegression(X, y, kern)\n",
@@ -289,7 +306,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for i in range(6):\n",
@@ -321,7 +340,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = GPy.models.GPRegression(X, y, kern)\n",
@@ -331,7 +352,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for i in range(6):\n",
@@ -359,7 +382,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Question 1 answer here"
@@ -411,7 +436,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "m = GPy.models.GPRegression(X,y)\n",
@@ -454,7 +481,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Exercise 2 answer here"
@@ -484,7 +513,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Z = np.random.rand(3,1)*12 #these are the locations of the three 'inducing', 'sparse' or 'pseudo' inputs.\n",
@@ -502,7 +533,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "m.plot_noiseless()\n",
@@ -581,7 +614,7 @@
    "source": [
     "# Extra?\n",
     "\n",
-    "If you've got this far, start on the GPLVM notebook!"
+    "If you've got this far, start on the <a href=\"http://gpss.cc/gpss17/labs/GPSS_Lab2extra_gplvm_2017.ipynb\">GPLVM notebook</a>!"
    ]
   },
   {
