--- a/_posts/2017-09-11-day-1.md
+++ b/_posts/2017-09-11-day-1.md
@@ -53,6 +53,6 @@ talks:
     institute: "Ecole des Mines de St Etienne"
   start: "16:00"
   end: "17:00"
-  slides: 
+  slides: KernelDesign.pdf
   youtube: 
 ---
