--- a/_posts/2017-09-12-day-2.md
+++ b/_posts/2017-09-12-day-2.md
@@ -33,7 +33,7 @@ talks:
     institute: University of Bristol
   start: "11:00"
   end: "12:30"
-  slides: 
+  slides: presentation.pdf
   youtube: 
 - title: "Lunch"
   start: "12:30"
@@ -57,6 +57,7 @@ talks:
     given: Simo
     url: "https://users.aalto.fi/~ssarkka/"
     institute: "Aalto University"
+  slides: spde-lecture.pdf
   youtube: 
   start: "16:00"
   end: "17:00"
