--- a/_posts/2017-09-11-day-1.md
+++ b/_posts/2017-09-11-day-1.md
@@ -17,7 +17,7 @@ talks:
   abstract: "In this talk I'll give a short introduction to Gaussian processes. The main assumed knowledge will be a background in proabilistic approaches to regression and linear algebra."
   start: "9:00"
   end: "10:30"
-  slides: 
+  slides: "http://inverseprobability.com/talks/lawrence-gpss17/gpss-session-1.html"
   youtube: 
 - title: "Coffee Break"
   start: "10:30"
