--- a/_posts/2017-09-11-day-1.md
+++ b/_posts/2017-09-11-day-1.md
@@ -17,7 +17,7 @@ talks:
   abstract: "In this talk I'll give a short introduction to Gaussian processes. The main assumed knowledge will be a background in proabilistic approaches to regression and linear algebra."
   start: "9:00"
   end: "10:30"
-  slides: "http://inverseprobability.com/talks/lawrence-gpss17/gpss-session-1.html"
+  slides: http://inverseprobability.com/talks/lawrence-gpss17/gpss-session-1.html
   youtube: 
 - title: "Coffee Break"
   start: "10:30"
@@ -31,7 +31,7 @@ talks:
     institute: University of Sheffield
   start: "11:00"
   end: "12:30"
-  slides: Wilkinson2017.pdf
+  slides: http://gpss.cc/gpss17/slides/Wilkinson2017.pdf
   youtube: 
 - title: "Lunch"
   start: "12:30"
@@ -53,6 +53,6 @@ talks:
     institute: "Ecole des Mines de St Etienne"
   start: "16:00"
   end: "17:00"
-  slides: KernelDesign.pdf
+  slides: http://gpss.cc/gpss17/slides/KernelDesign.pdf
   youtube: 
 ---
