--- a/_posts/2017-09-12-day-2.md
+++ b/_posts/2017-09-12-day-2.md
@@ -19,7 +19,7 @@ talks:
   abstract: ""
   start: "9:00"
   end: "10:30"
-  slides: multipleOutputGPs.pdf
+  slides: http://gpss.cc/gpss17/slides/multipleOutputGPs.pdf
   youtube: 
 - title: "Coffee Break"
   start: "10:30"
@@ -33,7 +33,7 @@ talks:
     institute: University of Bristol
   start: "11:00"
   end: "12:30"
-  slides: presentation.pdf
+  slides: http://gpss.cc/gpss17/slides/presentation.pdf
   youtube: 
 - title: "Lunch"
   start: "12:30"
@@ -57,7 +57,7 @@ talks:
     given: Simo
     url: "https://users.aalto.fi/~ssarkka/"
     institute: "Aalto University"
-  slides: spde-lecture.pdf
+  slides: http://gpss.cc/gpss17/slides/spde-lecture.pdf
   youtube: 
   start: "16:00"
   end: "17:00"
