--- a/_posts/2017-09-13-day-3.md
+++ b/_posts/2017-09-13-day-3.md
@@ -15,7 +15,7 @@ talks:
     given: Javier
     url: "http://javiergonzalezh.github.io/"
     institute: "Amazon Research Cambridge"
-  slides: gpss_bayesopt2017.pdf
+  slides: http://gpss.cc/gpss17/slides/gpss_bayesopt2017.pdf
   youtube: 
   start: "9:00"
   end: "10:30"
@@ -32,7 +32,7 @@ talks:
     institute: "University of Cambridge"
   start: "11:00"
   end: "12:30"
-  slides: 
+  slides: http://gpss.cc/gpss17/slides/gp-approx-new.pdf
   youtube: 
 - title: "Lunch"
   start: "12:30"
@@ -56,6 +56,7 @@ talks:
     given: Aki
     url: "https://users.aalto.fi/~ave/"
     institute: "Aalto University"
+  slides: http://gpss.cc/gpss17/slides/gpss2017_vehtari.pdf
   youtube: 
   start: "16:00"
   end: "17:00"
