--- a/_posts/2017-09-11-day-1.md
+++ b/_posts/2017-09-11-day-1.md
@@ -17,7 +17,7 @@ talks:
   abstract: "In this talk I'll give a short introduction to Gaussian processes. The main assumed knowledge will be a background in proabilistic approaches to regression and linear algebra."
   start: "9:00"
   end: "10:30"
-  slides: http://inverseprobability.com/talks/lawrence-gpss17/gpss-session-1.html
+  slides: gpss-session-1.html
   youtube: https://www.youtube.com/watch?v=bH40tEngu7I&list=PLpTp0l_CVmgwyAthrUmmdIFiunV1VvicM
 - title: "Coffee Break"
   start: "10:30"
@@ -31,7 +31,7 @@ talks:
     institute: University of Sheffield
   start: "11:00"
   end: "12:30"
-  slides: http://gpss.cc/gpss17/slides/Wilkinson2017.pdf
+  slides: Wilkinson2017.pdf
   youtube: https://www.youtube.com/watch?v=nICydGQCIrs&list=PLpTp0l_CVmgwyAthrUmmdIFiunV1VvicM&index=1
 - title: "Lunch"
   start: "12:30"
@@ -53,6 +53,6 @@ talks:
     institute: "Ecole des Mines de St Etienne"
   start: "16:00"
   end: "17:00"
-  slides: http://gpss.cc/gpss17/slides/KernelDesign.pdf
+  slides: KernelDesign.pdf
   youtube: https://www.youtube.com/watch?v=jKNAPoVfzvo&list=PLpTp0l_CVmgwyAthrUmmdIFiunV1VvicM&index=2
 ---
